CPG-24: add user-friendly formatters, tests, and pre-commit improvements
- Added `src/formatters.py` with utilities to build a layperson-friendly weather
  dataframe (column renames, wind summaries, NaN handling).
- Added `tests/test_formatters.py` with unit tests for compass conversion,
  wind speed handling, and dataframe formatting.
- Refactored `src/streamlit_app.py` to:
  - simplify imports and sys.path handling
  - add location presets and parsing helpers
  - integrate `build_user_view` for cleaner display tables
  - improve graph rendering and advanced technical table view
- Updated `.pre-commit-config.yaml`:
  - upgraded hook versions (black, ruff, mypy, yamllint)
  - added local pytest hook with coverage (85% threshold)
  - enabled `ruff --fix` auto-fixes
- Updated `pyproject.toml`:
  - aligned tool targets to Python 3.11
  - added coverage and pytest config
  - enabled stricter mypy settings
- Removed redundant `src/pyproject.toml`
- Updated `docs/conf.py` typing style (`List[str]` → `list[str]`)
- Applied black and ruff auto-fixes to `src/formatters.py` and `tests/test_formatters.py`

These changes improve developer workflow, enforce consistent style, and
add test coverage for new formatter utilities.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,54 +1,45 @@
----
-exclude: >-
-  ^(\.venv.*|venv|\.tox|\.eggs|node_modules|dist|build|__pycache__|\.pytest_cache|\.mypy_cache)/
-
 repos:
   - repo: https://github.com/psf/black
-    rev: 24.4.2
+    rev: 25.1.0
     hooks:
       - id: black
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.4.4
+    rev: v0.12.9
     hooks:
       - id: ruff
+        args: [--fix]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.10.0
+    rev: v1.17.1
     hooks:
       - id: mypy
+        additional_dependencies: []
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: mixed-line-ending
-        args: ["--fix=lf"]
       - id: check-yaml
 
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.37.1
+    hooks:
+      - id: yamllint
+
+  # Use a local pytest hook so we don't rely on a remote repo manifest.
   - repo: local
     hooks:
       - id: pytest
-        name: Run pytest (no coverage gate on commit)
-        entry: python -m pytest --cov=. --cov-branch --cov-report=term
-        language: system
-        types: [python]
+        name: pytest (with coverage)
+        entry: pytest
+        language: system   # use your current venv
         pass_filenames: false
-        always_run: true
-
-      - id: pytest-before-push
-        name: Run tests before push (40% min)
-        entry: python -m pytest --cov=. --cov-branch --cov-report=term --cov-fail-under=40
-        language: system
-        stages: [pre-push]
-        types: [python]
-        pass_filenames: false
-        always_run: true
-
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.35.1
-    hooks:
-      - id: yamllint
-        name: yamllint (YAML style + indentation)
-        # no --strict so warnings remain advisory
+        args:
+          - --cov=src
+          - --cov-branch
+          - --cov-report=term
+          - --cov-report=html
+          - --cov-fail-under=85
