refactor(fetch): adopt PEP 604 union syntax and drop unused typing import
- Replaced Union[date, datetime] with date | datetime (PEP 604 style)
- Removed obsolete `from typing import Union` import
- Ensured consistency with Ruff `UP007` rule

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+exclude: >-
+  ^(\.venv.*|venv|\.tox|\.eggs|node_modules|dist|build|__pycache__|\.pytest_cache|\.mypy_cache)/
+
 repos:
   - repo: https://github.com/psf/black
     rev: 25.1.0
